# check

./: .gitmodules  Cargo.toml  Justfile  dx
.circleci/: config.yml
.dx/check/: check-details.sr  dx-default.sr  web-lighthouse-equivalence.sr  web-lighthouse-runtimes.sr
.dx/serializer/: check-check-details.machine  check-dx-default.machine  check-web-lighthouse-equivalence.machine  check-web-lighthouse-runtimes.machine  dx.machine
.github/workflows-disabled/: ci.yml.disabled
crates/dx-litehouse/: Cargo.toml
crates/dx-litehouse/src/: html.rs  import.rs  lib.rs  runner.rs
docs/check/: components.md  file-size.md  generated.md  naming.md  rust.md  security.md  source-owned.md  structure.md  tests.md
src/: adapters.rs  diagnostics.rs  inventory.rs  languages.rs  lib.rs  model.rs  output.rs  path_filters.rs  registry.rs  rule_pack.rs  scoring.rs  syntax.rs  testing.rs  web_audit.rs  web_audit_runner.rs  web_lighthouse.rs
src/adapters/: biome.rs  c_family.rs  javascript.rs  javascript_package_manager.rs  runner.rs  scripted.rs  web_audit.rs
src/diagnostics/: c_family.rs  parsers.rs
src/litehouse/: mod.rs
src/output/: labels.rs  sections.rs  (+1 more)
tests/: adapter_runner.rs  adapters.rs  c_family_adapters.rs  c_family_build_safety.rs  c_family_diagnostics.rs  c_family_inventory.rs  default_rule_evaluator.rs  diagnostics.rs  javascript_adapter_safety.rs  litehouse.rs  rule_pack_category_diagnostics.rs  rule_pack_registry_metadata.rs  rule_pack_registry_trust.rs  rule_pack_rule_row_diagnostics.rs  web_audit.rs  web_audit_lighthouse_runtime.rs  web_audit_runner.rs
(+53 files in other folders)
